[Parser] complain for invalid enum raw value

Instead of fail silently, issue a diagosis when a valid expression can not
be parsed for enum raw value.

This resolves [SR-510](https://bugs.swift.org/browse/SR-510).